style.css
:root{
--white:#fff;
--turquoise:#36cb95;
--darker-turq:#13a26d;
--transparent:rgba(255, 255, 255, 0.5);
--light-black:#262626;
}

html{
    padding: 0;
    margin: 0;
    font-family: 'Montserrat', sans-serif;
    scroll-snap-type: y mandatory;
}

::-webkit-scrollbar {
   background-color: var(--light-black);
   width: 0.5vw;
}

::-webkit-scrollbar-thumb {
    background-color: #555; 
    width: 0.5vw;
}


body {
    background-color: #080808;
    color: var(--white);
    box-sizing: border-box;
    overflow-x: hidden;
}

section {
    scroll-snap-align: start;
}

/*GENERAL*/
.hide {
    display: none !important;
}

.show {
    display: block !important;
}

ul {
    padding: 0;
    margin: 0;
    list-style: none;
  }

.expanded {
    height: 100% !important;
}

.btn {
    padding: 10px 50px;
    outline: none;
    border-radius: 5px;
    color: var(--white);
    border: 1px solid var(--turquoise);
    text-decoration: none;
    font-family: inherit;
    font-size: 1.2rem;
    background-color: var(--turquoise);
    transition: background-color 0.3s;
    cursor: pointer;
    width: fit-content;
    font-family: 'Open Sans',sans-serif;
}

.btn:hover {
    background-color: var(--darker-turq);
}


/*HOME*/

#home {
    width: 100%;
    height: 100vh;
    background: url(images/background.png);
    background-position: top;
    background-size: cover;
}

nav {
    display: flex;
    justify-content: space-between;
    padding: 20px 10%;
    align-items: center;
    flex-wrap: wrap ;
}

nav h1 {
    font-size: 3rem;
    letter-spacing: 0.3rem;
    margin: 0;
}

nav h1 span {
    color: var(--turquoise);
    font-size: 3.1rem;
}

/*
.logo {
    width: 240px;
}
*/
nav ul {
    display: flex;
}

nav ul li,nav ul a {
    text-decoration: none;
    color: var(--white);
    font-size: 1.2rem;
    margin: 0.8rem ;
    list-style: none; 
    position: relative;
}

nav ul li a::after {
    content: '';
    width: 0;
    height: 3px;
    background: var(--turquoise);
    position: absolute;
    left: 0;
    bottom: -6px;
    transition: 0.5s;
}

nav ul li a.active-link::after {
    width: 100%;
}

nav ul li a:hover::after {
    width: 100%;
}

.home-text {
    margin-top: 20%;
    font-size: 2.5rem;
    padding: 0 10%;
}

.rotating-emoji {
    display: inline-block;
    animation: rotation 2s infinite alternate;
    transform-origin: 70% 70%;
    vertical-align: 0.2rem;
}

@keyframes rotation{
    0% {
        transform: rotate(0deg);
    }
    
    10% {
        transform: rotate(14deg);
    }

    20% {
        transform: rotate(-8deg);
    }

    30% {
        transform: rotate(14deg);
    }

    40% {
        transform: rotate(-4deg);
    }

    50% {
        transform: rotate(10deg);
    }

    100%{
        transform: rotate(0deg);
    }
}

.home-text h1 {
    font-size: 4rem;
}

.home-text h1 span {
    color: var(--turquoise);
    font-family: 'Open Sans',sans-serif;
}

.home-text .type-writer {
    white-space: nowrap;
    display: flex;
    letter-spacing: .1em;
    max-width: 100%;
    overflow: hidden;
    color: var(--turquoise);
    animation: typing 3s steps(30) infinite alternate,
                cursor step-end infinite alternate;
}

@keyframes typing {
    from {
        width: 0;
    }

    to {
        width: 100%;
    }
}

@keyframes cursor {
    50% {
        border-color: transparent;
    }
}


/*-----ABOUT-----*/
#about {
    padding: 30px 0;
}


.container {
    padding: 20px 10%;
}

.row {
    display: flex;
    justify-content: space-between;
    color: var(--transparent);
    flex-wrap: wrap;
}

.about-col-1 {
    flex-basis: 35%;
}

.about-col-1 img {
    width: 100%;
    border-radius: 20px;
}

.about-col-2 {
    flex-basis: 60%;   
    display: flex; 
    flex-direction: column;
}
.about-col-2>p {
    font-size: 1.2rem;
    padding-right: 50px;
    font-family: 'Open-Sans', sans-serif;
}

.about-col-2 .sub-title {
    margin-bottom: 0;
}

.sub-title {
    font-size: 4rem;
    color: var(--white);
}

.about-text {
    font-size: 1.2rem;
}

.tab-titles {
    display: flex;
    margin: 20px 0 40px;
}

.tab-link {
    font-size: 1.2rem;
    margin: 20px 20px 0 0 ;
    position: relative;
    cursor: pointer;
}

.tab-link::after {
    content: '';
    position: absolute;
    background: var(--darker-turq);
    bottom: -6px;
    left: 0;
    height: 3px;
    width: 0;
    transition: 0.5s;
}

.tab-link:hover::after {
    width: 100%;
}

.tab-link.active-link::after {
    width: 100%;
}

.tab-contents {
    display: flex;
    flex-direction: column;
}

.sub-list {
    margin-bottom: 20px;
}

.tab-contents span {
    color: var(--darker-turq);
    font-size: 1.2rem;
    font-weight: 500;
    margin: 10px 0;
}

.tab-contents li {
    list-style: none;
    margin: 5px 0;
}

#skills {
    display: flex ;
    justify-content: space-between;
    flex-wrap: wrap;
    padding: 0;
    margin: 0;
}

@keyframes slider {
    0%{
        transform: translateX(0);
    }
    100%{
        transform: translateX(-100%);
    }
}

.skills-carousel{
    overflow: hidden;
    padding: 10px 0;
    white-space: nowrap;
    max-width: 500px;
    position: relative;
}

.icons-list {
    display: inline-flex;
    animation: slider 25s infinite linear;
}

.skills-carousel::before,.skills-carousel:after {
    position: absolute;
    width: 100px;
    height: 200px;
    top: 20px;
    content: '';
    z-index: 2;
}

.skills-carousel::before{
    background:linear-gradient(to left,rgba(0, 0, 0, 0),rgba(0,0,0,0.6));
    left: 0;
}

.skills-carousel::after {
    background:linear-gradient(to right,rgba(0,0,0,0),rgba(0,0,0,0.6));
    right: 0;
}

.skills-carousel:hover .icons-list{
    animation-play-state: paused;
}

.icon-item{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin-right: 30px;
}

.icon-item p{
    font-size: 0.7rem; 
}

.icon-item img {
    width: 45px;
    height: 45px;
}

/*******Portfolio******/

#portfolio{
    padding: 10px 0;
}

#portfolio p {
    font-family: 'Open Sans',sans-serif;
}

.work-list {
    display: grid;
    gap: 40px;
    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
}

.work-item {
    margin-top: 30px;
    position: relative;
    overflow: hidden;
}

.work-item img {
    width: 100%;
    border-radius: 10px;
    display: block;
    transition: transform 0.5s;
}

/*
.work-item img:hover {
    transform: scale(1.1);
}
*/

.visual-cue {
    position: absolute;
    top: 10%;
    left: 30%;
    transform: translate(-50%, -50%);
    padding: 10px;
    border-radius: 5px;
    display: flex;
    gap: 10px;
    align-items: center;
    justify-content: center;
    opacity: 1;
}

.work-item:hover .visual-cue {
    opacity: 0;
  }

  .visual-cue img {
   width: 48px;
   height: 48px;
  }

.work-item:hover .description {
    height: 100%;
}

.description {
    width: 100%;
    height: 0;
    background:linear-gradient(rgba(0,0,0,0.5),var(--darker-turq));
    position: absolute;
    bottom: 0;
    left:0;
    text-align: center;
    overflow: hidden;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-size: 1rem;
    transition: height 0.5s;

}

.description h3 {
    padding: 0;
    margin: 10px 0;
}

.description p {
    padding: 0 60px;
    color: var(--white);
}

.description a {
    text-decoration: none;
    background-color: var(--white);
    border-radius: 50%;
    font-size: 1.2rem;
    padding: 15px;
    color: var(--darker-turq);
}

/*********Contact**********/
.form {
    display: flex;
    flex-direction: column;
    width: 100%;
}

.contact-left {
    flex-basis: 35%;
}

.contact-left h1 {
    margin: 0;
    padding: 0;
}

.contact-left p {
    font-size: 1.5rem;
    display: flex;
    align-items: center;
}

.contact-left p i {
    color: var(--turquoise);
    margin-right: 15px;
    font-size: 1.5rem;
}

.contact-right {
    flex-basis: 60%;
}

.social-icons {
    margin-bottom: 25px;
}

.social-icons img {
    transition: transform 0.3s;
    margin-right: 5px;
}

.social-icons img:hover{
    transform: scale(1.1);
}

.contact-left a {
    margin-bottom: 5rem;
}


.form input,.form textarea {
 width: 100%;
 outline: none;
 background: var(--light-black);
 padding: 15px;
 margin: 15px 0;
 font-size: 1.1rem;
 border: 1px solid transparent;
 border-radius: 8px;
}

form .btn2 {
    padding: 16px 60px;
    margin-top: 15px;
    display: flex;
    align-self: center;
}
/******MEDIA QUERY*****/
nav .fa-solid {
    display: none;
}

@media screen and (max-width:900px) {
    .home-text .type-writer {
        white-space: normal;
    }
}


@media screen and (max-width:600px) {

    html{
        scroll-snap-type:unset;
    }
      
    section {
        scroll-snap-align: unset;
    }
    
   
    #home {
        background: url(images/small-bg.png);
        background-position: 50%;
        background-size: cover;
        width: 100vw;
    }

    .home-text {
        margin-top: 100%;
        font-size: 1.5rem;
    }
    .home-text h1{
        font-size: 2rem;
    }

    nav .fa-solid {
        display: block;
        font-size: 1.8rem;
        cursor: pointer;
    }

    img.logo{
        width: 150px;
    }

    nav ul {
        background: var(--darker-turq);
        position: fixed;
        top: 0;
        right: -200px;
        width: 200px;
        height: 100vh;
        padding-top:50px ;
        display: flex;
        flex-direction: column;
        z-index: 2;
        transition: right 0.5s;
    }

    nav ul li {
        display: block;
        margin: 25px;
    }

    nav ul .fa-solid {
        position: absolute;
        left: 15px;
        top: 15px;
    }

    nav ul li a::after {
        background: var(--white);
    }


    .sub-title {
        font-size: 2.2rem;
    }

    .about-col-1,.about-col-2 {
        flex-basis: 100%;
    }

    .about-col-2 {
        font-size: 16px;
    }

    .about-col-2 > p {
        line-height: 1.25;
        padding-right: 15px ;
    }

    .skills-carousel{
        max-width: 250px;
    }

    .skills-carousel::before,.skills-carousel:after {
        width: 30px;
    }

    .tab-link {
        font-size: 1rem;
    }
    

    .tab-contents span {
        font-size: 1rem;
    }
   
    .form {
        margin-top: 50px;

    }
    .contact-left,.contact-right{
        flex-basis: 100%;
    }

    .contact-left p {
        align-items: center;
    }

}

